--- a/Abby/appsettings.json
+++ b/Abby/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=RWEB;Database=Abby;Trusted_Connection=True;"
+  }
 }
